More edits for chapter 1.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -89,10 +89,10 @@
   \headlesscite{larson:2005}.}
 
 \fntext{ta-2}{%
-  See, for example, \cite{arthurs:2011}; \cite{heyer:2012}; and
-  \cite{mcfarland:2012}. Arthurs’s work on Mehldau is something of an outlier,
-  for reasons explained below.
-}
+  \cite{strunk:1996}. See also, for example, \cite{arthurs:2011};
+  \cite{heyer:2012}; and \cite{mcfarland:2012}. Arthurs’s work on Mehldau is
+  something of an outlier, for reasons explained further in note
+  \ref{fn:mehldau}.}
 
 \fntext{ta-3}{%
   Throughout this document, the word “classical” used in this sense is used in
@@ -100,7 +100,7 @@
   art music tradition. This definition is imperfect, but is useful for
   distinguishing the music of Bach, Mozart, Beethoven, Schumann, and Wagner
   from that of Ellington, Basie, Parker, Monk, and Coltrane. I am not
-  implying that jazz cannot participate in the Western art music; certainly
+  implying that jazz cannot participate in the Western art music tradition; certainly
   at least some of it does.}
 
 \fntext{ta-4}{%
@@ -113,7 +113,7 @@
 
 \fntext{ta-6}{%
   \cite[76--79 and throughout]{mcgowan:2005}. The dialects are particularly
-  clear in the final tonic chords, especially in the case of the characteristic
+  clear in final tonic chords, especially in the case of the characteristic
   tonic major-minor seventh of the blues.}
 
 \fntext{ta-7}{%
@@ -121,7 +121,7 @@
   Riemannian analysis, see \cite{rings:paleo}.}
 
 \fntext{ta-8}{%
-  \cite{martin:1980}; see also \headlesscite{martin:1988}.}
+  \cite{martin:1980}; see also his \headlesscite{martin:1988}.}
 
 \fntext{ta-9}{%
   % appropriate?
@@ -134,7 +134,7 @@
   theoretical journals: \emph{Music Theory Spectrum}, \emph{Journal of Music
   Theory}, and the \emph{Dutch Journal of Music Theory}, for example. As jazz
   research has moved from the fringes into the theoretical mainstream, I think
-  it has grown increasingly abstract and further removed from jazz practice
+  it has grown more removed from jazz practice
   itself. As I mention above, one of the goals of the present study is to show
   how we might narrow this gap while still approaching the music with the
   necessary theoretical rigor.}
@@ -149,9 +149,7 @@
   In the opening of \emph{Free Composition}, Schenker refers to improvisation
   as “the ability in which all creativity begins”; \headlesscite{schenker:fc}.
   Schenker’s first \emph{Erlauterungsausgabe} (explanatory edition) was indeed
-  of an improvisatory work, Bach’s \emph{Chromatic Fantasy and Fugue};
-  \headlesscite{schenker:fantasy}.
-}
+  of an improvisatory work, Bach’s \emph{Chromatic Fantasy and Fugue}.}
 
 \fntext{ta-12}{%
   The interview was recorded on November 6, 1978. The program is available
@@ -161,9 +159,9 @@
   “Piano Jazz” Radio Broadcast} (The Jazz Alliance TJA-12038-2, 1993).}
 
 \fntext{ta-13}{%
-  Brad Mehldau, who is the focus of Daniel Arthurs’s work, is quite similar to
-  Evans, in that he is a classically-trained white pianist with a strong
-  acknowledged influence of the European classical tradition.}
+  \label{fn:mehldau}Brad Mehldau, who is the focus of Daniel Arthurs’s work,
+  is quite similar to Evans, in that he is a classically-trained white pianist
+  with a strong acknowledged influence of the European classical tradition.}
 
 \fntext{ta-14}{%
   Bill Evans made his first recordings as a leader in 1958, but he was not
@@ -173,7 +171,7 @@
   \emph{Portrait in Jazz}, released in 1960.}
 
 \fntext{ta-15}{%
-  In particular, value systems that do not come from the European classical
+  In particular, value systems that do not stem from the European classical
   tradition. Michaelsen, drawing on George Lewis’s distinction between
   “Afrological” and “Eurological” modes of improvising, suggests that
   Schenkerian analysis is a particularly Eurological method of analysis; his
@@ -192,7 +190,8 @@
 \fntext{tt-1}{%
   One of the main subjects of Ring’s book is a GIS that describes “heard scale
 degrees,” and does not include harmony at all; see \headlesscite[41--99, and
-throughout]{rings:2011}.}
+throughout]{rings:2011}. Lewin provides several examples of non-harmonic GISs
+in \headlesscite[16--24]{lewin:gmit}.}
 
 \fntext{tt-2}{%
   As evidenced in part by the number of books published in the last several
@@ -225,7 +224,7 @@ throughout]{rings:2011}.}
 }
 
 \fntext{tt-7}{%
-  In particular, it will be useful to consider the ii\h{m7b5} chord (a
+  In particular, it will be useful to consider the II\h{m7b5} chord (a
   half-diminished seventh) as a different type than the V7 chord (a dominant
   seventh) given their different functional roles in jazz harmony, despite the
   fact that they are of the same set class.}
@@ -241,6 +240,12 @@ throughout]{rings:2011}.}
   and “How My Heart Sings” (analyzed below) as examples of 10--7 linear
   intervallic patterns in \headlesscite[96--97]{strunk:1996}.}
 
+\fntext{ds-2b}{%
+  Emile De Cosmo’s etude book titled simply \emph{The Diatonic Cycle} (North
+  Bergen, N.J.: EDC Publications, 1970)\nocite{decosmo:1970} gives many
+  different solo patterns possible over the diatonic cycle in all twelve major
+  and minor keys.}
+
 \fntext{ds-2}{%
   In running text, dominant seventh chords are given with just a “7,” major
   sevenths with “M7,” minor sevenths with “m7,” and half-diminished sevenths
@@ -254,6 +259,17 @@ throughout]{rings:2011}.}
   seventh (\h{GmM7}), a sixth (\h{Gm6}), or even a minor seventh (\h{Gm7}; this
   is less likely since minor seventh chords are most commonly ii chords, not
   tonics).}
+
+\fntext{ds-3a}{%
+  \emph{GMIT} contains many terms that Lewin renders in all capitals; I have
+rendered them here in small capitals in order to reduce their typographical
+impact.}
+
+\fntext{ds-3b}{%
+  In chromatic pitch space, we might say that the interval between C4 and A3
+  is $-3$, while the interval between C4 and A5 would be $+21$. In chromatic
+  pitch class space, however, the interval is calculated mod-12 (because
+  octaves are equivalent), and both of these intervals are equal to 9.}
 
 \fntext{ds-4}{%
   Lewin’s definition of a mathematical group is spread over several pages in
