--- a/ch1.tex
+++ b/ch1.tex
@@ -196,7 +196,7 @@ bring these two disparate areas somewhat closer together.
 
 Studies of jazz harmony in recent years have primarily taken the form of
 Schenkerian analyses that seek to uncover large-scale voice-leading structures
-in order to define tonality. Schenkerian analysis has proven itself to be an
+in order to define tonality. Schenkerian analysis has proven to be an
 extremely useful tool for analyzing tonal music, and Steve Larson’s pioneering
 work in applying its methods to jazz has undoubtedly expanded the field of
 jazz studies and brought jazz analysis into the theoretical mainstream. While
@@ -204,16 +204,15 @@ theorists may disagree on exactly \emph{how} we should apply these Schenkerian
 techniques, hardly anyone seems to doubt that they are the best way to examine
 tonal structures in jazz.
 
-The touchstone of this literature is Steve Larson’s \emph{Analyzing Jazz: A
-Schenkerian Approach}, which is the culmination of his work of the previous
-decades.\fn{ta-1} In this and all of his work, Larson advocates what might be
-called an “orthodox” Schenkerian approach. He treats the extended tones
-common in jazz (sevenths, ninths, elevenths, etc.) as standing in for tonic
-members at some deeper structural level.\footcite[6]{larson:2009} In doing so,
-he is following the work of Steven Strunk, whose important article on linear
-intervallic patterns in jazz also uses an orthodox
-approach.\footcite{strunk:1996} Other theorists favoring the orthodox approach
-include Daniel Arthurs, David Heyer, and Mark McFarland.\fn{ta-2}
+The touchstone of the Schenkerian jazz literature is Steve Larson’s
+\emph{Analyzing Jazz: A Schenkerian Approach}, which is the culmination of his
+work of the previous decades.\fn{ta-1} In this and all of his work, Larson
+advocates what might be called an “orthodox” Schenkerian approach. He treats
+the extended tones common in jazz (sevenths, ninths, elevenths, etc.) as
+standing in for tonic members at some deeper structural
+level.\footcite[6]{larson:2009} Steven Strunk’s important article on linear
+intervallic patterns in jazz also uses an orthodox approach, as does the work
+of Daniel Arthurs, David Heyer, and Mark McFarland.\fn{ta-2}
 
 At levels close to the background, these orthodox analyses of jazz do not
 appear significantly different than analyses of classical music, and indeed
@@ -223,11 +222,11 @@ European classical tradition by using the same techniques to analyze both of
 them. This is especially important to note, since Schenkerian analysis has a
 well-known ethical component.\footcite{cook:1989} For Schenker, the
 compositions that were well-described by his theory were judged by him to be
-masterworks. % xxx citation needed...
-By showing that jazz compositions can also be understood with these
-Schenkerian techniques, the implicit conclusion is that they too should be
-judged to be masterworks. Underlying these orthodox approaches, I think, is a
-desire to legitimize a place for jazz in academic music theory.
+masterworks. By showing that jazz compositions can also be understood with
+these Schenkerian techniques, the implicit conclusion is that they too should
+be judged to be masterworks. Underlying these orthodox approaches, I think, is
+a desire to legitimize a place for jazz in academic music theory (I will
+return to this point in a moment).
 
 An opposing group of theorists also supports the use of Schenkerian analysis,
 but argues that it should be adapted to account for tonal features specific to
@@ -244,7 +243,7 @@ Martin draws in part on James McGowan’s “dialects of consonance” in jazz,
 which defines different contextually stable notes of the tonic triad.\fn{ta-5}
 McGowan argues that consonance in jazz is stylistically defined, and that in
 certain styles we might hear extended tones as consonances, even though they
-would be dissonant in classical music. He lists three “principal dialects”:
+would be dissonant in classical music. He describes three “principal dialects”:
 the added sixth, common in early jazz and Tin Pan Alley standards; the minor
 seventh, particular to the blues; and the major seventh, common in later jazz
 performance.\fn{ta-6} For Schenker, the background is derived from the
@@ -267,7 +266,7 @@ chord-scales via these triads.
 Other important non-Schenkerian models of jazz harmony are found in earlier
 works of Martin and Strunk. In his dissertation, Martin advocates a syntactic
 approach based on the circle of fifths, in which chains of decending fifths
-point towards a tonic note.\fn{ta-8} Steven Strunk’s early theory of jazz
+point towards a tonic pitch.\fn{ta-8} Steven Strunk’s early theory of jazz
 harmony is a layered approached that draws on the Schenkerian concept of
 analytical levels to uncover a single tonal center for a jazz
 tune.\footcite{strunk:1979} These older models tend to fall more in line with
@@ -286,7 +285,6 @@ will help to guide the discussion here.\fn{ta-10}
 In the article, Larson asks three main questions we must answer if we are to
 take seriously the suggestion that such Schenkerian analysis is appropriate
 for jazz:
-
 \begin{enumerate}
   \singlespacing
   \item Is it appropriate to apply to improvised music a method of analysis
@@ -311,12 +309,12 @@ The second question has generated much more discussion in the literature
 regarding exactly how we might apply Schenkerian methods to jazz, already
 discussed above. While this discussion is mostly one of the mechanics of
 analysis, it raises another point in which I am interested: is a jazz
-musician’s conception of musical space, or musical structure, the same as a
+musician’s conception of musical space (or musical structure) the same as a
 classical musician’s? The orthodox Schenkerians argue that it is not, and that
 jazz is a fundamentally triadic music (since at some deep structural level all
 of the extended tones are reduced away). Those that favor a modified approach
 disagree with this characterization, but still agree that Schenkerian analysis
-is the best way to understand jazz harmony. My own reactions to this question
+is the best way to approach jazz harmony. My own reactions to this question
 overlap with my answer to Larson’s third question, so I will return to it
 shortly.
 
@@ -325,8 +323,8 @@ argument is perhaps obvious: because Schenkerian analysis depends on
 uncovering long-range voice-leading plans, how could improvising musicians
 possibly hold such plans in their memory while playing? At some level, we
 might not even be interested in the answer to this question. Schenkerian
-analysis has proven explanatory, after all, for music that was composed
-indisputably without Schenkerian methods in mind (music written before
+analysis has proven explanatory, after all, for music that was doubtlessly
+composed without Schenkerian methods in mind (namely, music written before
 Schenker’s birth). Nevertheless, Larson spends a great deal of time addressing
 this particular point, so we should see to it here as well.
 
@@ -339,7 +337,7 @@ a basic structure in mind while playing:
 \begin{quoting}
   \singlespacing
   McPartland: Well, when you say structure, you mean like, one chorus in a
-  certain style, another\ldots
+  certain style, another \ldots
 
   \vspace{\baselineskip} \noindent
   Evans: No, I’m talking about the abstract, architectural thing, like the
@@ -349,7 +347,7 @@ Evans goes on to demonstrate how he has certain structural features in mind
 (harmonic and melodic arrivals). Larson then shows how Evans’s accompanying
 commentary can be understood as explaining  voice-leading events like
 prolongation and linear progressions, and provides voice-leading analyses of
-his playing.\footcite[See especially the table in][229]{larson:1998}.
+his playing.\footcite[See especially the table in][229]{larson:1998}
 
 I think that Larson’s use of Schenker’s methods to analyze the music of Bill
 Evans is well justified, but I am less sure of the extent to which they are
@@ -359,7 +357,7 @@ talented as an improvisor; and second, that his way of thinking was radicially
 different from that of other jazz musicians.”\footcite[239]{larson:1998}
 Certainly Evans was not a typical jazz musician: he was white, and studied at
 the Mannes College of Music, then and now a cradle of Schenkerian activity in
-this country.\fn{ta-13} Larson suggests that Evans’s was such an influential pianist
+this country.\fn{ta-13} Larson suggests that Evans was such an influential pianist
 that his Schenkerian improvisational tendencies might have influenced other
 musicians with whom he played. While this may be true, Evans was probably
 not seen as influential until after 1960, and this study is concerned
@@ -370,12 +368,12 @@ Larson allows that the first objection is justified: “That Evans was an
 unusually talented improvisor---and that Schenkerian analysis can show
 this---is a principle argument of this article.”\footcite[239]{larson:1998}
 This statement is representative of the legitimizing enterprise of the
-application of Schenker’s methods to jazz discussed above. It also contains a
+application of Schenker’s methods to jazz mentioned above. It also contains a
 dangerous implication, made explicit in Larson’s closing paragraphs:
 \begin{quoting}
   \singlespacing
   Much jazz improvisation lacks the relationships that reward long-range
-  hearing, and consists, as Hodeir observes, of “disconnected bits of
+  hearing, and consists, as [André] Hodeir observes, of “disconnected bits of
   nonsense.” \ldots\ But the fact that jazz musicians often say that “a jazz
   improvisation should tell a story” suggests that many jazz musicians are
   concerned with creating and experiencing global relationships. That they do
@@ -398,7 +396,7 @@ Evans’s interest in the “abstract, architectural thing” may well be excell
 performances when judged by other value systems.\fn{ta-15}  Furthermore,
 Schenkerian analyses of jazz often focus on what turns out to be the least
 interesting part of a jazz piece. Jazz is essentially tonal music, so it is
-not at all surprising (to me, at least) that it is often possible to uncover
+not at all surprising (to me, at least) that it is often possible to reveal
 an \emph{Ursatz} from a particular performance.
 
 Whether or not jazz musicians are thinking in a Schenkerian manner is not
@@ -409,7 +407,7 @@ Corners of that vast realm may nevertheless be illuminated via other
 analytical approaches, but those approaches will leave their own surpluses.
 And so on.”\footcite[5]{rings:2011} Schenkerian analysis typically focuses on
 long-range voice leading in order to reveal an underlying diatonic framework,
-while deemphasizing (some would say reducing) sufrace details, including much
+while deemphasizing (some would say reducing) surface details, including much
 harmonic chromaticism.
 
 This focus on harmony as a first-class object is something that is at the
@@ -421,15 +419,15 @@ something of their own terms. A Schenkerian analysis of Coltrane’s “Giant
 Steps” solo might reveal that it is “lacking an artistically convincing
 relationship among structural levels,” but it would likely be difficult to
 find a jazz musician who did not hold the composition up as an example of Coltrane’s
-artistry.\fn{ta-16}
+supreme mastery of the music.\fn{ta-16}
 
 % }}}
 
 \section{Transformational Theory}
 \label{sec:transformational-theory} %{{{
 
-Given the current dominance of Schenkerian theory in the jazz harmonic
-landscape, we might ask what transformational thinking brings to the table.
+Given the current dominance of Schenkerian theory in the field of jazz
+harmony, we might ask what transformational thinking brings to the table.
 Transformational theory in recent years has focused on neo-Riemannian
 analysis, with particular emphasis on efficient voice leading and
 non-functional, chromatic progressions. Steven Rings has written that this
@@ -441,23 +439,23 @@ rather than as a predicate for a certain style of analytical and theoretical
 thought.”\footcite[9]{rings:2011} As he is right to point out, there is
 nothing about transformational theory that necessitates its restriction to
 this locally chromatic music; his book uses the theory to explain, as he says,
-“specifically \emph{tonal} aspects of tonal music.” It is this meaning of
+“specifically \emph{tonal} aspects of tonal music.” It is this use of
 “transformational” that I wish to bring to bear on jazz, which is essentially
 tonal music.
 
 Fundamental to the Schenkerian approach is the relatively equal balance of
-harmony and voice leading, as mentioned above; for jazz musicians, though,
-this balance is heavily weighted toward the harmonic.  Schenkerian analysis
-tends to deemphasize certain harmonies with the aim of exposing an underlying
-diatonic framework. This goal is in contrast with the typical goal of a
-performing jazz musician, for whom individual chords have first-class status.
+harmony and voice leading; for jazz musicians, though, this balance is heavily
+weighted toward the harmonic.  Schenkerian analysis tends to deemphasize
+certain harmonies with the aim of exposing an underlying diatonic framework.
+This goal is in contrast with the typical goal of a performing jazz musician,
+for whom individual chords have first-class status.
 
 Transformational theory too, often treats harmonies as first-class objects,
 and thus makes it especially appropriate for analyzing jazz. “Often,” only
 because transformational theory can be used for more than simply examining
 harmony: Lewin’s Generalized Interval Systems (explained in detail below) only
 require a set of elements, a group of intervals, and a function mapping pairs
-of elements of the set into the group of intervals.\footcite[26]{lewin:gmit}
+of elements of the set into the group of intervals.
 Most commonly the elements of the set are harmonies, but they do not have to
 be.\fn{tt-1}
 
@@ -481,7 +479,7 @@ chords.\fn{tt-3}
 
 In general, neo-Riemannian-type operations on the (0258) tetrachords turn out
 to be somewhat less useful than their triadic counterpoints, owing to the
-symmetry of that set class.\fn{tt-4} Any one tetrachordal Tonnetz can only
+symmetry of set class (0258).\fn{tt-4} Any one tetrachordal Tonnetz can only
 show a subset of all of the (0258) tetrachords, while the familiar triadic
 Tonnetz of course shows all 24 major and minor triads.  Recognizing this
 limitation, Jack Douthett and Peter Steinbach present a model that also
@@ -497,7 +495,7 @@ The other group of transformational models consists of what Julian Hook has
 termed “cross-type transformations”: he extends Lewin’s definition of a
 transformation network to allow for transformations between objects of
 different types.\fn{tt-5} This category of transformations contains the
-inclusion transformations discussed by both Hook and Guy Capuzzo, which map a
+inclusion transformations (discussed by both Hook and Guy Capuzzo) which map a
 triad into the unique dominant or half-diminished seventh chord that contains
 it and vice versa.\footcites{hook:2002,capuzzo:2004} Also included in this
 category are more general approaches for relating set classes of different
@@ -525,22 +523,22 @@ identical in some other typological system.\fn{tt-7}
 
 It will be easiest to introduce the transformational approach to jazz harmony
 developed in this study by way of an example. Much of this dissertation will
-be interested in the development of various musical spaces and various kinds
-of motions possible within them. This kind of approach was initially developed
-by David Lewin in \emph{Generalized Musical Intervals and Transformations},
-and a review of the approach found there will be useful before moving on
-to more involved examples.
+be interested in the development of various musical spaces and motions that
+are possible within them. This kind of approach was first developed by David
+Lewin in \emph{Generalized Musical Intervals and Transformations}, and a
+review of his approach will be useful before moving on to more involved
+examples.
 
 \subsection{Intervals and Transformations}
 \label{subsec:inttrans} % {{{{
 
 Figure \ref{ds:autumn-leaves-changes} shows the chord changes to the A section
-on the jazz standard “Autumn Leaves.”\fn{ds-2a} Jazz musicians typically refer
+on the jazz standard “Autumn Leaves.”\fn{ds-2a} Jazz musicians sometimes refer
 to this progression as a “diatonic cycle”: it uses only seventh-chords found
-in the G-minor diatonic collection. As in classical tonal music, the leading
-tone is raised in the dominant chord so that the resulting chord is a D7, not
-a Dm7.\fn{ds-2} We can easily arrange this progression around the familiar
-circle of fifths, placing G minor, the tonic, at the top of the circle (see
+in the G-minor diatonic collection.\fn{ds-2b} As in classical music, the leading
+tone is raised in the dominant chord so that the resulting chord is D7, not
+Dm7.\fn{ds-2} We can easily arrange this progression around the familiar
+circle of fifths, placing the tonic G minor at the top of the circle (see
 Figure \ref{ds:circle-of-fifths}).
 
 \figBeg
@@ -557,12 +555,12 @@ Figure \ref{ds:circle-of-fifths}).
 \figEnd
 
 While this arrangement around the diatonic circle of fifths makes intuitive
-sense, it also depicts what Lewin has called a Generalized Interval System
+sense, it can also represent what Lewin has called a Generalized Interval System
 (GIS). Generalized Interval Systems are Lewin’s way of formalizing the
 “directed measurements, distances, or motions” that we often understand as
 “characteristic textural features” of a given musical
 space.\footcite[16]{lewin:gmit} Though we will unpack this definition using
-the the harmonies from the A section of “Autumn Leaves” as an example, the
+the the harmonies from the A section of “Autumn Leaves” as an example, Lewin’s
 formal definition is as follows:
 \begin{quoting}
   \singlespacing
@@ -582,29 +580,30 @@ formal definition is as follows:
 The first element in a GIS is a family of elements, S, which Lewin also calls
 a musical space. Preceding this formal definition, he gives a number of
 examples of musical spaces, including the familiar diatonic and pitch and
-pitch-class spaces as well as less familiar musical spaces like frequency
+pitch-class spaces, along with less familiar musical spaces like frequency
 space, time point space, and various durational
 spaces.\footcite[16--25]{lewin:gmit} In our “Autumn Leaves” example, we are
-interested in the (unordered) set of harmonies in the G-minor diatonic cycle:
-\mbox{$S =$ \{\h{Gm},} \h{Am7b5}, \h{BbM7}, \h{Cm7}, \h{D7}, \h{EbM7},
-\h{F7}\}.\fn{ds-3}
+interested in the (unordered) set of harmonies in the G-minor diatonic
+collection: \mbox{$S =$ \{\h{Gm},} \h{Am7b5}, \h{BbM7}, \h{Cm7}, \h{D7},
+\h{EbM7}, \h{F7}\}.\fn{ds-3}
 
 With the first element of a GIS satisfied, we must then define a group of
-intervals (IVLS). Though we could perhaps imagine a number of different ways
-to define intervals among elements of the set S (a point to which we will
-return later), the most obvious is to measure distances in diatonic steps
-between the chord roots. Because we are interested in abstract chord roots and
-not the actual pitches played by a bass player or a pianist’s left hand, we
-will use diatonic pitch classes. This has the effect of modularizing the set
-of possible intervals, changing IVLS from $\{\ldots,-2,-1,0,1,2,\ldots\}$ (as
-it would be in diatonic \emph{pitch} space) to $\{0,1,\ldots,6\}$ (diatonic
-pitch \emph{class} space). Arithmetic in this group is mod-7, exactly in the
-way that arithmetic using the more familiar chromatic pitch class space,
-$\{0,1,2,\ldots,11\}$, is mod-12.
+intervals (\ivls).\fn{ds-3a} Though we could perhaps imagine a number of
+different ways to define intervals among elements of the set S (a point to
+which we will return later), the most obvious is to measure distances in
+diatonic steps between chord roots. Because we are interested in abstract
+chord roots and not the actual pitches played by some bass player or pianist’s
+left hand, we will use diatonic pitch classes. This has the effect of
+modularizing the set of possible intervals, changing \ivls{} from
+$\{\ldots,-2,-1,0,1,2,\ldots\}$ (as it would be in diatonic \emph{pitch}
+space) to $\{0,1,\ldots,6\}$ (diatonic pitch \emph{class} space).\fn{ds-3b}
+Arithmetic in this group is mod-7, exactly in the way that arithmetic using
+the more familiar chromatic pitch class space, $\{0,1,2,\ldots,11\}$, is
+mod-12.
 
-Lewin specifies that IVLS must be a mathematical group, and we will take care
-here to show that IVLS = $\{0,1,\ldots,6\}$ is indeed such a group. A group
-is a set of elements, $G$, and a binary operaton, $\otimes$, that satisies the
+Lewin specifies that \ivls{} must be a mathematical group, and we will take care
+here to show that \ivls{} = $\{0,1,\ldots,6\}$ is indeed such a group. A group
+is a set of elements, $G$, and a binary operation, $\otimes$, that satisies the
 four group axioms:
 \begin{compactitem}
   \singlespacing
@@ -619,23 +618,23 @@ four group axioms:
     true.\fn{ds-4}
 \end{compactitem}
 
-To show that our IVLS is a group, it is sufficient to show that the set
+To show that our \ivls{} is a group, it is sufficient to show that the set
 $\{0,1,\ldots,6\}$ under some binary operation satisfies the group axioms. The
 binary operation is simply addition mod-7 (we will notate using the usual $+$
 sign instead of the abstract $\otimes$ used above).  We can then show that the
-set IVLS is closed: for any two elements $a, b \in \mathrm{IVLS}$, $a + b$ is
-also an element of IVLS ($1 + 3 = 4; 4 + 4 = 1; 1 + 0 = 1$; and so on).
+set \ivls{} is closed: for any two elements $a, b \in \mathrm{\ivls{}}$, $a + b$ is
+also an element of \ivls{} ($1 + 3 = 4; 4 + 4 = 1; 1 + 0 = 1$; and so on).
 Modular addition, like its non-modular counterpart, is associative:
-$(3 + 4) + 5 = 3 + (4 + 5)$, and likewise for any chosen elements of IVLS.
+$(3 + 4) + 5 = 3 + (4 + 5)$, and likewise for any chosen elements of \ivls{}.
 The identity element for addition is 0, which combined with any element $a \in
-\mathrm{IVLS}$ gives $a$ itself. Inverses in the group are simply complements
+\mathrm{\ivls{}}$ gives $a$ itself. Inverses in the group are simply complements
 mod-7 (the number that when added to the given number gives 0, mod-7):
 $2^{-1} = 5; 1^{-1} = 6$; and so on. The integers modulo $n$ are labeled
-$\intZ_n$, so we may also refer to IVLS in our “Autumn Leaves” example as
+$\intZ_n$, so we may also refer to \ivls{} in our “Autumn Leaves” example as
 the group $\intZ_7$.
 
 The last element of a GIS is an interval function that maps $S \times S$ into
-IVLS. In other words, the interval from one element of S to another must be a
+\ivls{}. In other words, the interval from one element of S to another must be a
 member of the group $\intZ_7$. In our “Autumn Leaves” example, the interval
 from one element of S to another is simply the number of steps in the G-minor
 diatonic collection (always counting upward) between the two elements. Thus,
@@ -656,17 +655,17 @@ there must be a unique chord $t$ which satisfies the equation \mbox{int$(s,t)
 are also true for any choice of r, s, t $\in$ S.
 
 Before shifting our focus from generalized intervals to transformations, I
-want to return to the structure of IVLS, the group $\intZ_7$. Above, we
+want to return to the structure of \ivls{}, the group $\intZ_7$. Above, we
 measured intervals by the number of G-minor diatonic steps between chord
-roots: a single step corresponded to interval 1. We can also say that the
+roots: a single step corresponded to the interval 1. We can also say that the
 group $\intZ_7$ is a cyclic group, \emph{generated} by the interval 1. (Cyclic
 groups are notated $\mathcal{C}_n$, where $n$ is the size of the group; we
-could therefore label the group in question $\mathcal{C}_7$). Measuring
+could therefore label the group in question $\mathcal{C}_7$.) Counting
 diatonic steps is not the only way we might consider measuring intervals in
 the space, however. Given the ubiquitous descending fifths of “Autumn Leaves,”
 we might instead like to measure distance by the number of descending fifths
 between chord roots. Though this generation has no noticable effect on the
-abstract group structure of IVLS---the group is $\mathcal{C}_7$ in either
+abstract group structure of \ivls{}---the group is $\mathcal{C}_7$ in either
 case---it does affect the last element of a GIS, the interval
 function.\fn{ds-5} As shown in Figure \ref{ds:c7-generators},
 \mbox{int(\h{Am7b5}, D7) = 3} when measured by diatonic steps (the left
@@ -857,7 +856,7 @@ are shown in Figure \ref{ds:wonderland-changes}.\fn{ds-13} Like “Autumn
 Leaves,” “Alice in Wonderland” begins with a minor diatonic cycle in mm.~1--7
 (also beginning on a iv chord), shown here in A minor. We can modify our GIS
 from above simply by changing the set ($S$ is now the set \{\h{Am}, \h{Bm7b5},
-\h{CM7}, \h{Dm7}, \h{E7}, \h{FM7}, \h{G7}\}); the groups IVLS and the
+\h{CM7}, \h{Dm7}, \h{E7}, \h{FM7}, \h{G7}\}); the groups \ivls{} and the
 interval function are identical. The harmony in m.~7 is an \h{Am7} chord,
 but because the quality of the tonic seventh chord is ambiguous in minor
 keys, this chord is easily understood as a tonic.
