--- a/diss.bib
+++ b/diss.bib
@@ -163,6 +163,14 @@ Theory} }
   year        = {2008}
 }
 
+@book{decosmo:1970,
+  author      = {De Cosmo, Emile},
+  title       = {The Diatonic Cycle},
+  address     = {North Bergen, N.J.},
+  publisher   = {EDC Publications},
+  year        = {1970}
+}
+
 @article{demsey:1991,
   author      = {Demsey, David},
   title       = {Chromatic Third Relations in the Music of John Coltrane},
