--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -192,6 +192,7 @@
 \newcommand{\tsub}{\textsubscript}
 \newcommand{\tsup}{\textsuperscript}
 \newcommand{\rightparen}{)}
+\newcommand{\ivls}{\textsc{ivls}}
 
 
 % math shortcuts
