--- a/discog.bib
+++ b/discog.bib
@@ -22,6 +22,17 @@
   type        = {CD}
 }
 
+@music{davis:kindofblue,
+  author      = {Davis, Miles},
+  title       = {Kind of Blue},
+  userd       = {Columbia CL 1355,},
+  origdate    = {1959},
+  series      = {Reissued, Columbia/Legacy},
+  number      = {CJ 40579},
+  year        = {1992},
+  type        = {CD},
+}
+
 @music{guaraldi:flower,
   author      = {Guaraldi, Vince},
   title       = {A Flower is a Lovesome Thing},
