More text edits for ch. 1.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -188,9 +188,9 @@
 % Transformational Theory {{{
 
 \fntext{tt-1}{%
-  One of the main subjects of Ring’s book is a GIS that describes “heard scale
+  One of the main subjects of Ring’s book is a \gis{} that describes “heard scale
 degrees,” and does not include harmony at all; see \headlesscite[41--99, and
-throughout]{rings:2011}. Lewin provides several examples of non-harmonic GISs
+throughout]{rings:2011}. Lewin provides several examples of non-harmonic \gis{}s
 in \headlesscite[16--24]{lewin:gmit}.}
 
 \fntext{tt-2}{%
@@ -288,19 +288,19 @@ impact.}
   chromatic octave before returning to the starting point.}
 
 \fntext{ds-5a}{%
-  To avoid confusion, we will use only the GIS that measures distance in
+  To avoid confusion, we will use only the \gis{} that measures distance in
   diatonic steps from this point on.}
 
 \fntext{ds-6}{%
   \cite[159]{lewin:gmit}. Henry Klumpenhouwer argues that the dichotomy
-  between Cartesian GIS thinking and what he calls “anti-Cartesian”
-  transformational thinking is \emph{the} central theme of \emph{GMIT}; see
+  between Cartesian \gis{} thinking and what he calls “anti-Cartesian”
+  transformational thinking is the central theme of \emph{GMIT}; see
   \headlesscite{klumpenhouwer:2006}. For more on the “transformational
   attitude,” see \cite[24--29]{rings:2011}; \cite{satyendra:2004}; and
   \cite[172--77]{hook:2007gmit}.}
 
 \fntext{ds-7}{%
-  Ramon Satyendra describes the two attitudes as being noun-oriented (GISs)
+  Ramon Satyendra describes the two attitudes as being noun-oriented (\gis{}s)
   vs. verb-oriented (transformations); \headlesscite[102--3]{satyendra:2004}.}
 
 \fntext{ds-8}{%
@@ -314,15 +314,20 @@ impact.}
   diatonic set S.}
 
 \fntext{ds-10}{%
-  The intervals chosen for measurement in the GIS do have an impact on the
+  The intervals chosen for measurement in the \gis{} do have an impact on the
   associated transformational system: if we had used the descending fifths
   generation as described above, the the operator $t_1$ (not $t_3$) would map
-  \h{Am7b5} onto \h{D7}, since the interval in the underlying GIS would be
+  \h{Am7b5} onto \h{D7}, since the interval in the underlying \gis{} would be
   different.}
 
   % }}}}
 
 % Analytical Applications {{{{
+\fntext{ds-11a}{%
+  Lewin’s definition of a transformation network appears is at
+  \headlesscite[196]{lewin:gmit}. We will delay an in-depth explanation until
+  the next chapter, at which point it will be more relevant.}
+
 \fntext{ds-11}{%
   This observation has not gone unrecognized by jazz musicians: at least one
   recording (Vince Guaraldi, on the album \emph{A Flower is a Lovesome
@@ -341,7 +346,11 @@ impact.}
   Evans’s \emph{Portrait in Jazz}.\nocite{evans:portrait} These changes are as
   given in \emph{The Real Book}, and as played by Evans. This figure gives the
   changes to the second ending of the first sixteen measures (the first ending
-contains a \tf\ in D minor to return to the opening).}
+  contains a \tf\ in D minor to return to the opening).}
+
+\fntext{ds-13a}{%
+  The interval functions are identical, with the caveat that diatonic steps
+  are to be counted in the A-minor collection, not the G-minor.}
 
 \fntext{ds-14}{%
   The \h{Eb7} chord is a tritone substitute for \h{A7}, which is of course the
@@ -360,15 +369,15 @@ contains a \tf\ in D minor to return to the opening).}
 
 \fntext{ds-17}{%
   The canonical recording of this tune is again by Bill Evans, on the album
-  \emph{How My Heart Sings!}.\nocite{evans:heartsings} Evans seems to have a
+  \emph{How My Heart Sings!}\nocite{evans:heartsings} Evans seems to have a
   propensity towards tunes with diatonic cycles: \emph{Portrait in Jazz} also
   contains a very well-known recording of “Autumn Leaves.”}
 
 \fntext{ds-18}{%
   Exactly which chord functions as the pivot is of little importance, so long
   as it happens before the E dominant seventh. I am inclined to hear the
-  \h{FM7} as a pivot, in order to keep both \tfo\ progressions (in C major and
-  A minor) intact.}
+  \h{FM7} as a pivot (functioning simlutaneously as IV and VI), in order to
+  keep both \tfo\ progressions (in C major and A minor) intact.}
 
 \fntext{ds-18a}{%
   These changes are again taken from \emph{The Real Book}. The \h{Am7b5} chord
@@ -383,7 +392,7 @@ contains a \tf\ in D minor to return to the opening).}
   the Pershing, Vol. 2}.\nocite{jamal:pershing}}
 
 \fntext{ds-20}{%
-  If the linking dominant did not occur at the end of the bridge, we would see
+  If the linking dominant did not appear at the end of the bridge, we would see
   the succession \h{EM7}--\h{Fm7}. This succession is remarkably similar to
   Lewin’s \textsc{slide} operation: retaining the third of the chord while
   moving the root and fifth by half-step; see \emph{GMIT},
@@ -399,7 +408,7 @@ contains a \tf\ in D minor to return to the opening).}
   ambiguity pervades this piece” (\headlesscite[15--19]{martin:1988}.).}
 
 \fntext{ds-22}{%
-  Hearing the third-relations does have the nice side effect, missing in our
+  Hearing the third-relations does have the nice side effect, absent from our
   analysis here, that all of the perceived tonics in the first sixteen bars
   (\Aflat, C, \Eflat, G) spell out the tonic major-seventh chord;
   \cite[19]{martin:1988} makes this observation.}
