--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -193,6 +193,7 @@
 \newcommand{\tsup}{\textsuperscript}
 \newcommand{\rightparen}{)}
 \newcommand{\ivls}{\textsc{ivls}}
+\newcommand{\gis}{\textsc{gis}}
 
 
 % math shortcuts
